[gd_scene load_steps=25 format=3 uid="uid://dulu8yqn1otak"]

[ext_resource type="Texture2D" uid="uid://cjtl67y0j0mri" path="res://resources/bat.png" id="1_pb2o4"]
[ext_resource type="Script" uid="uid://5appnnre2qqj" path="res://bat.gd" id="1_tofr1"]
[ext_resource type="Texture2D" uid="uid://cyeqppupjkyvs" path="res://resources/batparticle.png" id="3_vobq3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tofr1"]
radius = 4.0
height = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vobq3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1tubu"]
atlas = ExtResource("1_pb2o4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tecl"]
atlas = ExtResource("1_pb2o4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp0fn"]
atlas = ExtResource("1_pb2o4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulak1"]
atlas = ExtResource("1_pb2o4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pjmi"]
atlas = ExtResource("1_pb2o4")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s65s"]
atlas = ExtResource("1_pb2o4")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1e43q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tubu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tecl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp0fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulak1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulak1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulak1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulak1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulak1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pjmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s65s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tubu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tubu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tubu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tubu")
}],
"loop": true,
"name": &"default",
"speed": 36.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tofr1"]
radius = 135.01482

[sub_resource type="Gradient" id="Gradient_jnamf"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tofr1"]
gradient = SubResource("Gradient_jnamf")
width = 16

[sub_resource type="Animation" id="Animation_a1mae"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_twgjm"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.75, 1),
"update": 0,
"values": [Color(1, 0.23137255, 0.23137255, 0.6392157), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8omkc"]
_data = {
&"RESET": SubResource("Animation_a1mae"),
&"hit": SubResource("Animation_twgjm")
}

[sub_resource type="Curve" id="Curve_tofr1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_18qvj"]
curve = SubResource("Curve_tofr1")

[sub_resource type="Curve" id="Curve_vobq3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.719697, 0.7191012), -0.98876435, -0.98876435, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_v2lle"]
curve = SubResource("Curve_vobq3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1tubu"]
particle_flag_disable_z = true
radial_velocity_min = 11.759977
radial_velocity_max = 23.519978
gravity = Vector3(0, 0, 0)
linear_accel_min = -2.2351742e-06
linear_accel_max = -2.2351742e-06
radial_accel_min = -2.2351742e-06
radial_accel_max = -2.2351742e-06
scale_curve = SubResource("CurveTexture_v2lle")
alpha_curve = SubResource("CurveTexture_18qvj")

[sub_resource type="CircleShape2D" id="CircleShape2D_1tubu"]
radius = 19.026299

[node name="Bat" type="CharacterBody2D"]
script = ExtResource("1_tofr1")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 51.23

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_tofr1")
disabled = true

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource("CircleShape2D_vobq3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1e43q")
autoplay = "default"
frame_progress = 0.1311369

[node name="Detection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
visible = false
shape = SubResource("CircleShape2D_tofr1")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -8.0
offset_top = -20.0
offset_right = 8.0
offset_bottom = -19.0
max_value = 10.0
step = 0.1
value = 10.0
texture_under = SubResource("GradientTexture1D_tofr1")
texture_progress = SubResource("GradientTexture1D_tofr1")
tint_under = Color(0.4, 0.4, 0.4, 1)
tint_progress = Color(0.5019608, 0.16078432, 0.16078432, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8omkc")
}

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
scale = Vector2(3, 3)
emitting = false
texture = ExtResource("3_vobq3")
lifetime = 0.6
one_shot = true
process_material = SubResource("ParticleProcessMaterial_1tubu")

[node name="AttackRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_1tubu")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.75

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="finished" from="GPUParticles2D" to="." method="_on_gpu_particles_2d_finished"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
